[package]
name = "ytmetasearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "0.7.19"
anyhow = "1.0.64"
clap = { version = "3.2.20", features = ["derive"] }
glob = "0.3.0"
rayon = "1.5.3"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
zstd = "0.11.2"
